unpackaged/main/default/objects/Credit__c/Credit__c.object-meta.xml
<CustomObject>
    <label>Credit</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>