unpackaged/main/default/objects/Credit__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Credits</relationshipLabel>
    <relationshipName>Credits</relationshipName>
    <type>Lookup</type>
</CustomField>