unpackaged/main/default/objects/Credit__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Credits</relationshipLabel>
    <relationshipName>Credits</relationshipName>
    <type>Lookup</type>
</CustomField>