unpackaged/main/default/objects/Credit__c/fields/Credit_Hours_Left__c.field-meta.xml
<CustomField>
    <fullName>Credit_Hours_Left__c</fullName>
    <formula>Hours_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Hours Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>