unpackaged/main/default/objects/Credit__c/fields/Credit_Value__c.field-meta.xml
<CustomField>
    <fullName>Credit_Value__c</fullName>
    <label>Credit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>