unpackaged/main/default/objects/Credit__c/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <formula>IF(TODAY() &gt;=  Expiration_Date__c, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>