unpackaged/main/default/objects/Credit__c/fields/Hours_Value__c.field-meta.xml
<CustomField>
    <fullName>Hours_Value__c</fullName>
    <label>Hours Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>