unpackaged/main/default/objects/Credit__c/fields/Insider_Team__c.field-meta.xml
<CustomField>
    <fullName>Insider_Team__c</fullName>
    <formula>Contact__r.Account.Insider_Team__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insider Team</label>
    <type>Text</type>
</CustomField>