unpackaged/main/default/objects/Credit__c/fields/Months_Until_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Months_Until_Expiration__c</fullName>
    <formula>Days_Until_Expiration__c / 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months Until Expiration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>