unpackaged/main/default/objects/Credit__c/fields/Original_Credit_Hours__c.field-meta.xml
<CustomField>
    <fullName>Original_Credit_Hours__c</fullName>
    <label>Original Credit Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>