unpackaged/main/default/objects/Credit__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credits (Vendor)</relationshipLabel>
    <relationshipName>Credits1</relationshipName>
    <type>Lookup</type>
</CustomField>