unpackaged/main/default/objects/Credit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Credit_Value__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Vendor__c</columns>
    <columns>Vendor_Type__c</columns>
    <columns>Client__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>