unpackaged/main/default/objects/Credit__c/listViews/All_Client_Credits.listView-meta.xml
<ListView>
    <fullName>All_Client_Credits</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>All Client Credits</label>
</ListView>